docs(917): refresh the lane F brief and run its four derisk items
Head heap baseline measured at the production flags (heap empty, full GCs
are metaspace/code-cache thresholds), energy_reduced re-homing added to
PR 1, three 885 constructs 917 had missed, app-engine composition with the
ArchUnit rule that actually bites. Fixes the stale MMF table and phantom
Health RPC rows in the coordination doc. Brief v2 in 917-evidence.

Co-Authored-By: Claude Fable 5.1 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01W8fHxDyfMQ1QEqeZERchCG